--- a/iSpanCarSpringboot/src/main/resources/static/iSpanCar/script/css/sb-admin-2.css
+++ b/iSpanCarSpringboot/src/main/resources/static/iSpanCar/script/css/sb-admin-2.css
@@ -10861,8 +10861,8 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
-  background-position: center;
+  background: url("https://attach.mobile01.com/image/news/3305b70e208fdc89004393f96e3eca39.jpg");
+  background-position: -120px center;
   background-size: cover;
 }
 
