--- a/iSpanCarSpringboot/src/main/resources/static/iSpanCar/script/css/basic.css
+++ b/iSpanCarSpringboot/src/main/resources/static/iSpanCar/script/css/basic.css
@@ -8763,3 +8763,47 @@ textarea {
   margin-top: 10px;
   background-color: #f5f5f5 !important;
 }
+.showMessage {
+  padding: 10px 20px;
+  border-radius: 5px;
+  position: fixed;
+  top: 15%;
+  left: 50%;
+  color: #ffffff;
+  z-index: 999;
+  transform: translate(-50%, 0);
+}
+
+.showMessageSuccess {
+  background-color: #f0f9eb;
+  border: 1px solid #E1F3D8;
+  color: #67c23a;
+}
+
+.showMessageError {
+  background-color: #fef0f0;
+  border: 1px solid #fde2e2;
+  color: #F76C6C;
+}
+
+#catetrys {
+  display: flex;
+  align-items: center;
+  margin-top: 22px;
+  margin-bottom: 12px;
+}
+
+#catetrys .cataItem {
+  border-radius: 3px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  font-size: 13px;
+  padding: 5px 12px;
+  margin-right: 12px;
+  cursor: pointer;
+
+}
+
+#catetrys .active {
+  background-color: #148aa4;
+  color: white !important;
+}
