--- a/iSpanCarSpringboot/src/main/resources/static/iSpanCar/script/css/styles.css
+++ b/iSpanCarSpringboot/src/main/resources/static/iSpanCar/script/css/styles.css
@@ -12602,7 +12602,7 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("/iSpanCar/script/img/car2.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("http://localhost:8080/iSpanCar/script/img/car2.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
