--- a/iSpanCarSpringboot/src/main/resources/static/iSpanCar/script/css/basic.css
+++ b/iSpanCarSpringboot/src/main/resources/static/iSpanCar/script/css/basic.css
@@ -3289,7 +3289,7 @@ button:hover {
   display: block;
   text-align: right;
   padding: 10px;
-  font-size: 12;
+  font-size: 12px;
   clear: both;
   float: none;
   margin: 0;
