--- a/iSpanCarSpringboot/src/main/resources/static/iSpanCar/script/css/basic.css
+++ b/iSpanCarSpringboot/src/main/resources/static/iSpanCar/script/css/basic.css
@@ -170,7 +170,7 @@ table {
 #BH-wrapper {
   position: relative;
   width: 1000px;
-  margin: 160px auto;
+  margin: 100px auto;
 }
 #BH-wrapper.is-fixedmenu {
   margin-top: 50px;
@@ -8821,4 +8821,82 @@ textarea {
 #mainNav .nav-link {
 
   color: #000 !important;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+
+.topBar {
+  width: 100%;
+  height: 35px;
+  background: linear-gradient(135deg, #13aeab 0%, #117e96 75%);
+}
+.bar-content {
+  width:98%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.bar-search {
+  display: flex;
+  align-items: center;
+  background-color: white;
+  font-size: 14px;
+  border-radius: 5px;
+  padding: 3px 12px;
+}
+.bar-search img {
+  width: 24px;
+  margin-right: 10px;
+}
+.bar-search input {
+  border: none;
+}
+.fw-btn {
+  background: #FFF;
+  color: #117e96;
+  box-shadow: none;
+  transition: all 0.3s;
+  text-shadow: none;
+  cursor: pointer;
+  padding: 2px 16px;
+  border-radius: 6px;
+}
+.c-select-data {
+  display: flex;
+  width: 80%;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.c-select-data #SelectData{
+  margin-right: 15px;
+  width: 180px;
+}
+.c-select-data #SelectData2 {
+  width: 100px;
+}
+
+#select-input {
+  width: 80% !important;
+  margin: 15px auto;
+
+}
+
+#editor-container2 {
+  height: 500px;
+}
+
+
+#toolbar-container2 {
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 20px;
+  margin-left: -180px;
 }
