--- a/iSpanCarSpringboot/src/main/resources/static/iSpanCar/script/css/basic.css
+++ b/iSpanCarSpringboot/src/main/resources/static/iSpanCar/script/css/basic.css
@@ -8550,6 +8550,7 @@ ul.rwd-nav > ul > li > dl {
 
 .detailshow {
   display: none;
+  padding-bottom: 5rem;
 }
 
 #floortextarea {
@@ -8828,6 +8829,9 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
+}
+.footer {
+  padding: 1rem 0 !important;
 }
 
 
