--- a/iSpanCarSpringboot/src/main/resources/static/iSpanCar/script/css/basic.css
+++ b/iSpanCarSpringboot/src/main/resources/static/iSpanCar/script/css/basic.css
@@ -170,7 +170,7 @@ table {
 #BH-wrapper {
   position: relative;
   width: 1000px;
-  margin: 0 auto;
+  margin: 100px auto;
 }
 #BH-wrapper.is-fixedmenu {
   margin-top: 50px;
@@ -1354,7 +1354,7 @@ input[type="submit"] {
     background-color: rgba(255, 255, 255, 0.98);
   }
 }
-@media \0 screen\,screen\9 {
+@media \0 screen\, screen\9 {
   .TOP-msg {
     background-color: rgba(255, 255, 255, 0.98);
   }
@@ -3289,7 +3289,7 @@ button:hover {
   display: block;
   text-align: right;
   padding: 10px;
-  font-size: 12;
+  font-size: 12px;
   clear: both;
   float: none;
   margin: 0;
@@ -8550,6 +8550,7 @@ ul.rwd-nav > ul > li > dl {
 
 .detailshow {
   display: none;
+  padding-bottom: 5rem;
 }
 
 #floortextarea {
@@ -8811,4 +8812,95 @@ textarea {
   object-fit: contain;
   width: 130px !important;
   height: auto !important;
+}
+
+/* #mainNav .navbar-brand { */
+
+/*   color: #000 !important; */
+
+/* } */
+/* #mainNav .nav-link { */
+
+/*   color: #000 !important; */
+/* } */
+
+/* footer { */
+/*   position: fixed; */
+/*   bottom: 0; */
+/*   left: 0; */
+/*   right: 0; */
+/* } */
+/* .footer { */
+/*   padding: 1rem 0 !important; */
+/* } */
+
+
+.topBar {
+  width: 100%;
+  height: 35px;
+  background: linear-gradient(135deg, #13aeab 0%, #117e96 75%);
+}
+.bar-content {
+  width:98%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.bar-search {
+  display: flex;
+  align-items: center;
+  background-color: white;
+  font-size: 14px;
+  border-radius: 5px;
+  padding: 3px 12px;
+}
+.bar-search img {
+  width: 24px;
+  margin-right: 10px;
+}
+.bar-search input {
+  border: none;
+}
+.fw-btn {
+  background: #FFF;
+  color: #117e96;
+  box-shadow: none;
+  transition: all 0.3s;
+  text-shadow: none;
+  cursor: pointer;
+  padding: 2px 16px;
+  border-radius: 6px;
+}
+.c-select-data {
+  display: flex;
+  width: 80%;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.c-select-data #SelectData{
+  margin-right: 15px;
+  width: 180px;
+}
+.c-select-data #SelectData2 {
+  width: 100px;
+}
+
+#select-input {
+  width: 80% !important;
+  margin: 15px auto;
+
+}
+
+#editor-container2 {
+  height: 500px;
+}
+
+
+#toolbar-container2 {
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 20px;
+  margin-left: -180px;
 }
